# clipboard-warrior

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  clipboard-warrior-old  clipboarddb.json  global-install.sh  model.py
.github/artifacts/: install.sh
.github/workflows/: release.yaml
data/: db.json
src/: main.rs
